--- a/part1.ipynb
+++ b/part1.ipynb
@@ -4,19 +4,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mitiq Tutorial"
+    "# Mitiq Tutorial\n",
+    "\n",
+    "Before running this tutorial, make sure you have `cirq`, and `mitiq` installed.\n",
+    "\n",
+    "```bash\n",
+    "pip install cirq mitiq\n",
+    "```\n",
+    "\n",
+    "Use `pip list | grep $package` to ensure it is installed.\n",
+    "\n",
+    "\n",
+    "# Goals\n",
+    "\n",
+    "- learn how to apply ZNE on a basic workflow\n",
+    "- explore other QEM methods via calibration"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Executors"
+    "## Executors\n",
+    "\n",
+    "Executors are python functions that consume a quantum circuit, and output an expectation value.\n",
+    "A type signature might look something like `Circuit -> float`.\n",
+    "That said, executors can have additional arguments used to control other parts of the execution process.\n",
+    "The circuit must be the first argument, however."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,10 +45,10 @@
     "def execute(circuit, noise_level=0.005):\n",
     "    \"\"\"Returns Tr[ρ |0⟩⟨0|] where ρ is the state prepared by the circuit\n",
     "    with depolarizing noise.\"\"\"\n",
-    "    noisy_circuit = circuit.with_noise(cirq.depolarize(p=noise_level))\n",
+    "    # add depolarizing noise\n",
     "    return (\n",
     "        cirq.DensityMatrixSimulator()\n",
-    "        .simulate(noisy_circuit)\n",
+    "        .simulate(circuit)\n",
     "        .final_density_matrix[0, 0]\n",
     "        .real\n",
     "    )"
@@ -39,28 +58,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ZNE"
+    "## ZNE\n",
+    "\n",
+    "### Unitary Folding\n",
+    "\n",
+    "First, we define a simple circuit to fold."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error w/o  Mitiq: 0.558\n",
-      "Error w Mitiq:    0.313\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "a, b, c = cirq.LineQubit.range(3)\n",
+    "\n",
+    "circuit = cirq.Circuit([\n",
+    "    cirq.H(a),\n",
+    "    cirq.CNOT(a, b),\n",
+    "    cirq.CNOT(b, c),\n",
+    "    cirq.S(a),\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(circuit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mitiq.zne.scaling import fold_global, fold_gates_at_random\n",
+    "\n",
+    "folded_circuit = \"?\"\n",
+    "\n",
+    "print(folded_circuit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mitiq.benchmarks import generate_rb_circuits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from mitiq import zne\n",
-    "from mitiq.benchmarks import generate_rb_circuits\n",
     "\n",
-    "circuit = generate_rb_circuits(n_qubits=2, num_cliffords=20)[0]\n",
+    "\n",
+    "circuit = generate_rb_circuits(2, num_cliffords=20)[0]\n",
     "\n",
     "true_value = execute(circuit, noise_level=0.0)\n",
     "noisy_value = execute(circuit)\n",
@@ -71,15 +132,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Calibration"
+    "## Calibration\n",
+    "\n",
+    "When you want to explore more options"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,81 +161,73 @@
     "    circuit = circuit.with_noise(cirq.depolarize(p=noise_level))\n",
     "    result = cirq.DensityMatrixSimulator().run(circuit, repetitions=100)\n",
     "    bitstrings = np.column_stack(list(result.measurements.values()))\n",
-    "    return MeasurementResult(bitstrings)"
+    "    return MeasurementResult(bitstrings)\n",
+    "\n",
+    "# why did we choose calibration executors to only take MeasurementResult executors?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "| performance | circuit | method | extrapolation | scale factors | scale_method         |\n",
-      "| ----------- | ------- | ------ | ------------- | ------------- | -------------------- |\n",
-      "|     ❌      |   ghz   |  ZNE   | Richardson    | 1.0, 2.0, 3.0 | fold_global          |\n",
-      "|     ✅      |   ghz   |  ZNE   | Richardson    | 1.0, 3.0, 5.0 | fold_global          |\n",
-      "|     ❌      |   ghz   |  ZNE   | Linear        | 1.0, 2.0, 3.0 | fold_global          |\n",
-      "|     ❌      |   ghz   |  ZNE   | Linear        | 1.0, 3.0, 5.0 | fold_global          |\n",
-      "|     ❌      |   ghz   |  ZNE   | Richardson    | 1.0, 2.0, 3.0 | fold_gates_at_random |\n",
-      "|     ❌      |   ghz   |  ZNE   | Richardson    | 1.0, 3.0, 5.0 | fold_gates_at_random |\n",
-      "|     ✅      |   ghz   |  ZNE   | Linear        | 1.0, 2.0, 3.0 | fold_gates_at_random |\n",
-      "|     ❌      |   ghz   |  ZNE   | Linear        | 1.0, 3.0, 5.0 | fold_gates_at_random |\n",
-      "|     ❌      |    w    |  ZNE   | Richardson    | 1.0, 2.0, 3.0 | fold_global          |\n",
-      "|     ✅      |    w    |  ZNE   | Richardson    | 1.0, 3.0, 5.0 | fold_global          |\n",
-      "|     ❌      |    w    |  ZNE   | Linear        | 1.0, 2.0, 3.0 | fold_global          |\n",
-      "|     ✅      |    w    |  ZNE   | Linear        | 1.0, 3.0, 5.0 | fold_global          |\n",
-      "|     ❌      |    w    |  ZNE   | Richardson    | 1.0, 2.0, 3.0 | fold_gates_at_random |\n",
-      "|     ❌      |    w    |  ZNE   | Richardson    | 1.0, 3.0, 5.0 | fold_gates_at_random |\n",
-      "|     ❌      |    w    |  ZNE   | Linear        | 1.0, 2.0, 3.0 | fold_gates_at_random |\n",
-      "|     ❌      |    w    |  ZNE   | Linear        | 1.0, 3.0, 5.0 | fold_gates_at_random |\n",
-      "|     ✅      |   rb    |  ZNE   | Richardson    | 1.0, 2.0, 3.0 | fold_global          |\n",
-      "|     ✅      |   rb    |  ZNE   | Richardson    | 1.0, 3.0, 5.0 | fold_global          |\n",
-      "|     ✅      |   rb    |  ZNE   | Linear        | 1.0, 2.0, 3.0 | fold_global          |\n",
-      "|     ✅      |   rb    |  ZNE   | Linear        | 1.0, 3.0, 5.0 | fold_global          |\n",
-      "|     ❌      |   rb    |  ZNE   | Richardson    | 1.0, 2.0, 3.0 | fold_gates_at_random |\n",
-      "|     ✅      |   rb    |  ZNE   | Richardson    | 1.0, 3.0, 5.0 | fold_gates_at_random |\n",
-      "|     ✅      |   rb    |  ZNE   | Linear        | 1.0, 2.0, 3.0 | fold_gates_at_random |\n",
-      "|     ✅      |   rb    |  ZNE   | Linear        | 1.0, 3.0, 5.0 | fold_gates_at_random |\n",
-      "|     ❌      | mirror  |  ZNE   | Richardson    | 1.0, 2.0, 3.0 | fold_global          |\n",
-      "|     ✅      | mirror  |  ZNE   | Richardson    | 1.0, 3.0, 5.0 | fold_global          |\n",
-      "|     ❌      | mirror  |  ZNE   | Linear        | 1.0, 2.0, 3.0 | fold_global          |\n",
-      "|     ✅      | mirror  |  ZNE   | Linear        | 1.0, 3.0, 5.0 | fold_global          |\n",
-      "|     ❌      | mirror  |  ZNE   | Richardson    | 1.0, 2.0, 3.0 | fold_gates_at_random |\n",
-      "|     ✅      | mirror  |  ZNE   | Richardson    | 1.0, 3.0, 5.0 | fold_gates_at_random |\n",
-      "|     ✅      | mirror  |  ZNE   | Linear        | 1.0, 2.0, 3.0 | fold_gates_at_random |\n",
-      "|     ❌      | mirror  |  ZNE   | Linear        | 1.0, 3.0, 5.0 | fold_gates_at_random |\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "# circuit.append(cirq.measure(circuit.all_qubits()))\n",
+    "# print(circuit)\n",
+    "# print(execute_with_depolarizing(circuit))\n",
+    "# print(MeasurementResult(np.column_stack(list(cirq.DensityMatrixSimulator().run(circuit, repetitions=100).measurements.values()))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from mitiq import Calibrator\n",
     "\n",
-    "cal = Calibrator(execute_with_depolarizing, frontend=\"cirq\")\n",
+    "cal = Calibrator(...)\n",
     "\n",
     "cal.run(log=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'technique': 'ZNE', 'factory': 'RichardsonFactory', 'scale_factors': [1.0, 3.0, 5.0], 'scale_method': 'fold_global'}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cal.best_strategy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mitiq.calibration import PECSettings\n",
+    "\n",
+    "# run calibrator with PEC\n",
+    "cal = Calibrator(execute_with_depolarizing, frontend=\"cirq\", settings=PECSettings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cal.run(log=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(PECSettings)\n"
    ]
   },
   {
@@ -192,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
