clean up notebooks

--- a/part1.ipynb
+++ b/part1.ipynb
@@ -22,6 +22,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install mitiq"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -60,9 +69,7 @@
    "source": [
     "## ZNE\n",
     "\n",
-    "### Unitary Folding\n",
-    "\n",
-    "First, we define a simple circuit to fold."
+    "First, we define a simple circuit to work with."
    ]
   },
   {
@@ -91,12 +98,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Unitary Folding"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from mitiq.zne.scaling import fold_global, fold_gates_at_random\n",
+    "from mitiq.zne.scaling import fold_gates_at_random, fold_global\n",
+    "\n",
     "\n",
     "folded_circuit = \"?\"\n",
     "\n",
@@ -121,7 +136,7 @@
     "from mitiq import zne\n",
     "\n",
     "\n",
-    "circuit = generate_rb_circuits(2, num_cliffords=20)[0]\n",
+    "# circuit = generate_rb_circuits(2, num_cliffords=20)[0]\n",
     "\n",
     "true_value = execute(circuit, noise_level=0.0)\n",
     "noisy_value = execute(circuit)\n",
@@ -130,13 +145,6 @@
     "print(f\"Error w/o  Mitiq: {abs((true_value - noisy_value) / true_value):.3f}\")\n",
     "print(f\"Error w Mitiq:    {abs((true_value - zne_value) / true_value):.3f}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -158,24 +166,12 @@
     "\n",
     "\n",
     "def execute_with_depolarizing(circuit, noise_level=0.001):\n",
+    "    \"\"\"Return bitstrings outcomes from circuit executions performed by\n",
+    "    a density matrix simulation with depolarizing noise.\"\"\"\n",
     "    circuit = circuit.with_noise(cirq.depolarize(p=noise_level))\n",
     "    result = cirq.DensityMatrixSimulator().run(circuit, repetitions=100)\n",
     "    bitstrings = np.column_stack(list(result.measurements.values()))\n",
-    "    return MeasurementResult(bitstrings)\n",
-    "\n",
-    "# why did we choose calibration executors to only take MeasurementResult executors?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# circuit.append(cirq.measure(circuit.all_qubits()))\n",
-    "# print(circuit)\n",
-    "# print(execute_with_depolarizing(circuit))\n",
-    "# print(MeasurementResult(np.column_stack(list(cirq.DensityMatrixSimulator().run(circuit, repetitions=100).measurements.values()))))"
+    "    return MeasurementResult(bitstrings)"
    ]
   },
   {
@@ -202,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,15 +215,6 @@
    "outputs": [],
    "source": [
     "cal.run(log=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(PECSettings)\n"
    ]
   },
   {
