--- a/solved/part1.ipynb
+++ b/solved/part1.ipynb
@@ -4,7 +4,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mitiq Tutorial"
+    "# Mitiq Tutorial\n",
+    "\n",
+    "Before running this tutorial, make sure you have `cirq`, and `mitiq` installed.\n",
+    "\n",
+    "```bash\n",
+    "pip install cirq mitiq\n",
+    "```\n",
+    "\n",
+    "Use `pip list | grep $package` to ensure it is installed.\n",
+    "\n",
+    "\n",
+    "# Goals\n",
+    "\n",
+    "- learn how to apply ZNE on a basic workflow\n",
+    "- explore other QEM methods via calibration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install mitiq"
    ]
   },
   {
@@ -21,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,112 +67,85 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ZNE"
+    "## ZNE\n",
+    "\n",
+    "First, we define a simple circuit to work with."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0: ───H───@───@───\n",
-      "          │   │\n",
-      "1: ───────X───┼───\n",
-      "              │\n",
-      "2: ───────────X───\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "circuit = cirq.Circuit()\n",
     "a, b, c = cirq.LineQubit.range(3)\n",
     "\n",
-    "circuit.append(cirq.H(a))\n",
-    "circuit.append(cirq.CNOT(a, b))\n",
-    "circuit.append(cirq.CNOT(a, c))\n",
-    "\n",
+    "circuit = cirq.Circuit([\n",
+    "    cirq.H(a),\n",
+    "    cirq.CNOT(a, b),\n",
+    "    cirq.CNOT(b, c),\n",
+    "    cirq.S(a),\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(circuit)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 50,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     ┌───┐     ┌───┐\n",
-      "q_0: ┤ H ├──■──┤ S ├\n",
-      "     └───┘┌─┴─┐└───┘\n",
-      "q_1: ─────┤ X ├──■──\n",
-      "          └───┘┌─┴─┐\n",
-      "q_2: ──────────┤ X ├\n",
-      "               └───┘\n"
-     ]
-    }
-   ],
    "source": [
-    "from qiskit import QuantumCircuit\n",
+    "### Unitary Folding\n",
     "\n",
-    "qiskit_circuit = QuantumCircuit(3)\n",
-    "qiskit_circuit.h(0)\n",
-    "qiskit_circuit.cnot(0, 1)\n",
-    "qiskit_circuit.cnot(1, 2)\n",
-    "qiskit_circuit.s(0)\n",
-    "\n",
-    "print(qiskit_circuit)"
+    "Making the circuit longer, and hence noisier."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     ┌───┐     ┌───┐┌─────┐     ┌───┐┌───┐     ┌───┐\n",
-      "q_0: ┤ H ├──■──┤ S ├┤ Sdg ├──■──┤ H ├┤ H ├──■──┤ S ├\n",
-      "     └───┘┌─┴─┐└───┘└─────┘┌─┴─┐└───┘└───┘┌─┴─┐└───┘\n",
-      "q_1: ─────┤ X ├──■─────■───┤ X ├──────────┤ X ├──■──\n",
-      "          └───┘┌─┴─┐ ┌─┴─┐ └───┘          └───┘┌─┴─┐\n",
-      "q_2: ──────────┤ X ├─┤ X ├─────────────────────┤ X ├\n",
-      "               └───┘ └───┘                     └───┘\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from mitiq.zne.scaling import fold_global\n",
+    "from mitiq.zne.scaling import fold_gates_at_random, fold_global\n",
     "\n",
-    "print(fold_global(qiskit_circuit, 3))"
+    "\n",
+    "folded_circuit = fold_gates_at_random(circuit, scale_factor=3)\n",
+    "\n",
+    "print(folded_circuit)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Randomized Benchmarking circuits are circuits that are in effect, equivalent to the identity. Hence, the ideal probability that the end state is $|00\\cdots 0\\rangle$ is 1."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error w/o  Mitiq: 0.582\n",
-      "Error w Mitiq:    0.325\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "from mitiq.benchmarks import generate_rb_circuits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from mitiq import zne\n",
-    "from mitiq.benchmarks import generate_rb_circuits\n",
     "\n",
-    "circuit = generate_rb_circuits(n_qubits=2, num_cliffords=20)[0]\n",
+    "\n",
+    "circuit = generate_rb_circuits(2, num_cliffords=20)[0]\n",
     "\n",
     "true_value = execute(circuit, noise_level=0.0)\n",
     "noisy_value = execute(circuit)\n",
@@ -160,22 +156,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Calibration"
+    "## Calibration\n",
+    "\n",
+    "When you want to explore more options"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,6 +175,8 @@
     "\n",
     "\n",
     "def execute_with_depolarizing(circuit, noise_level=0.001):\n",
+    "    \"\"\"Return bitstrings outcomes from circuit executions performed by\n",
+    "    a density matrix simulation with depolarizing noise.\"\"\"\n",
     "    circuit = circuit.with_noise(cirq.depolarize(p=noise_level))\n",
     "    result = cirq.DensityMatrixSimulator().run(circuit, repetitions=100)\n",
     "    bitstrings = np.column_stack(list(result.measurements.values()))\n",
@@ -192,97 +185,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MeasurementResult: {'nqubits': 100, 'qubit_indices': (0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99), 'shots': 2, 'counts': {'0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000': 2}}\n",
-      "MeasurementResult: {'nqubits': 2, 'qubit_indices': (0, 1), 'shots': 100, 'counts': {'00': 100}}\n"
-     ]
-    }
-   ],
-   "source": [
-    "# circuit.append(cirq.measure(circuit.all_qubits()))\n",
-    "# print(circuit)\n",
-    "# print(execute_with_depolarizing(circuit))\n",
-    "print(MeasurementResult(np.column_stack(list(cirq.DensityMatrixSimulator().run(circuit, repetitions=100).measurements.values()))))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "| performance | circuit | method | extrapolation | scale factors | scale_method         |\n",
-      "| ----------- | ------- | ------ | ------------- | ------------- | -------------------- |\n",
-      "|     ❌      |   ghz   |  ZNE   | Richardson    | 1.0, 2.0, 3.0 | fold_global          |\n",
-      "|     ❌      |   ghz   |  ZNE   | Richardson    | 1.0, 3.0, 5.0 | fold_global          |\n",
-      "|     ❌      |   ghz   |  ZNE   | Linear        | 1.0, 2.0, 3.0 | fold_global          |\n",
-      "|     ❌      |   ghz   |  ZNE   | Linear        | 1.0, 3.0, 5.0 | fold_global          |\n",
-      "|     ❌      |   ghz   |  ZNE   | Richardson    | 1.0, 2.0, 3.0 | fold_gates_at_random |\n",
-      "|     ❌      |   ghz   |  ZNE   | Richardson    | 1.0, 3.0, 5.0 | fold_gates_at_random |\n",
-      "|     ❌      |   ghz   |  ZNE   | Linear        | 1.0, 2.0, 3.0 | fold_gates_at_random |\n",
-      "|     ✅      |   ghz   |  ZNE   | Linear        | 1.0, 3.0, 5.0 | fold_gates_at_random |\n",
-      "|     ❌      |    w    |  ZNE   | Richardson    | 1.0, 2.0, 3.0 | fold_global          |\n",
-      "|     ❌      |    w    |  ZNE   | Richardson    | 1.0, 3.0, 5.0 | fold_global          |\n",
-      "|     ❌      |    w    |  ZNE   | Linear        | 1.0, 2.0, 3.0 | fold_global          |\n",
-      "|     ❌      |    w    |  ZNE   | Linear        | 1.0, 3.0, 5.0 | fold_global          |\n",
-      "|     ❌      |    w    |  ZNE   | Richardson    | 1.0, 2.0, 3.0 | fold_gates_at_random |\n",
-      "|     ❌      |    w    |  ZNE   | Richardson    | 1.0, 3.0, 5.0 | fold_gates_at_random |\n",
-      "|     ❌      |    w    |  ZNE   | Linear        | 1.0, 2.0, 3.0 | fold_gates_at_random |\n",
-      "|     ❌      |    w    |  ZNE   | Linear        | 1.0, 3.0, 5.0 | fold_gates_at_random |\n",
-      "|     ❌      |   rb    |  ZNE   | Richardson    | 1.0, 2.0, 3.0 | fold_global          |\n",
-      "|     ✅      |   rb    |  ZNE   | Richardson    | 1.0, 3.0, 5.0 | fold_global          |\n",
-      "|     ✅      |   rb    |  ZNE   | Linear        | 1.0, 2.0, 3.0 | fold_global          |\n",
-      "|     ✅      |   rb    |  ZNE   | Linear        | 1.0, 3.0, 5.0 | fold_global          |\n",
-      "|     ✅      |   rb    |  ZNE   | Richardson    | 1.0, 2.0, 3.0 | fold_gates_at_random |\n",
-      "|     ✅      |   rb    |  ZNE   | Richardson    | 1.0, 3.0, 5.0 | fold_gates_at_random |\n",
-      "|     ✅      |   rb    |  ZNE   | Linear        | 1.0, 2.0, 3.0 | fold_gates_at_random |\n",
-      "|     ❌      |   rb    |  ZNE   | Linear        | 1.0, 3.0, 5.0 | fold_gates_at_random |\n",
-      "|     ❌      | mirror  |  ZNE   | Richardson    | 1.0, 2.0, 3.0 | fold_global          |\n",
-      "|     ❌      | mirror  |  ZNE   | Richardson    | 1.0, 3.0, 5.0 | fold_global          |\n",
-      "|     ❌      | mirror  |  ZNE   | Linear        | 1.0, 2.0, 3.0 | fold_global          |\n",
-      "|     ✅      | mirror  |  ZNE   | Linear        | 1.0, 3.0, 5.0 | fold_global          |\n",
-      "|     ✅      | mirror  |  ZNE   | Richardson    | 1.0, 2.0, 3.0 | fold_gates_at_random |\n",
-      "|     ❌      | mirror  |  ZNE   | Richardson    | 1.0, 3.0, 5.0 | fold_gates_at_random |\n",
-      "|     ❌      | mirror  |  ZNE   | Linear        | 1.0, 2.0, 3.0 | fold_gates_at_random |\n",
-      "|     ✅      | mirror  |  ZNE   | Linear        | 1.0, 3.0, 5.0 | fold_gates_at_random |\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from mitiq import Calibrator\n",
     "\n",
-    "cal = Calibrator(execute_with_depolarizing, frontend=\"cirq\")\n",
+    "cal = Calibrator(...)\n",
     "\n",
     "cal.run(log=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'technique': 'ZNE', 'factory': 'LinearFactory', 'scale_factors': [1.0, 2.0, 3.0], 'scale_method': 'fold_global'}"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cal.best_strategy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mitiq.calibration import PECSettings\n",
+    "\n",
+    "# run calibrator with PEC\n",
+    "cal = Calibrator(execute_with_depolarizing, frontend=\"cirq\", settings=PECSettings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cal.run(log=True)"
    ]
   },
   {
@@ -309,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
