--- a/part2_pec.ipynb
+++ b/part2_pec.ipynb
@@ -11,12 +11,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### In this section:\n",
+    "### In this section we will complete the following steps:\n",
     "#### 1. Set up an example circuit and executor in a Mitiq-supported frontend\n",
     "#### 2. Step through the two main components of PEC: \n",
     "     a. generating quasiprobability representations\n",
     "     b. sampling from the representations\n",
-    "#### 3. Use Mitiq's top level function `mitiq.pec.execute_with_pec()` and check that the results are equivalent "
+    "#### 3. Use Mitiq's top level function `mitiq.pec.execute_with_pec()` and check that the results are equivalent to those obtained in Step 2."
    ]
   },
   {
