Wordsmithing part2_pec_solved.ipynb

--- a/solved/part2_pec_solved.ipynb
+++ b/solved/part2_pec_solved.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "### In this section we will complete the following steps:\n",
-    "#### 1. Set up an example circuit and executor in a Mitiq-supported frontend\n",
+    "#### 1. Set up an example circuit in a Mitiq-supported frontend\n",
     "#### 2. Step through the two main components of PEC: \n",
     "     a. generating quasiprobability representations\n",
     "     b. sampling from the representations\n",
