--- a/part1_zne.ipynb
+++ b/part1_zne.ipynb
@@ -27,6 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# if you're using GitHub codespaces, you can use this to install directly in the notebook\n",
     "%pip install mitiq"
    ]
   },
@@ -101,7 +102,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Unitary Folding"
+    "### Unitary Folding\n",
+    "\n",
+    "Making the circuit longer, and hence noisier."
    ]
   },
   {
@@ -113,10 +116,26 @@
     "from mitiq.zne.scaling import fold_gates_at_random, fold_global\n",
     "\n",
     "\n",
-    "folded_circuit = \"?\"\n",
+    "folded_circuit = \"...\"\n",
     "\n",
     "print(folded_circuit)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extrapolation\n",
+    "\n",
+    "Computing the Zero-Noise limit."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -131,7 +150,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from mitiq.benchmarks import generate_rb_circuits"
+    "from mitiq.benchmarks import generate_rb_circuits\n",
+    "\n",
+    "circuit = generate_rb_circuits(2, num_cliffords=20)[0]\n",
+    "\n",
+    "# print(circuit)"
    ]
   },
   {
@@ -142,8 +165,6 @@
    "source": [
     "from mitiq import zne\n",
     "\n",
-    "\n",
-    "# circuit = generate_rb_circuits(2, num_cliffords=20)[0]\n",
     "\n",
     "true_value = execute(circuit, noise_level=0.0)\n",
     "noisy_value = execute(circuit)\n",
@@ -189,9 +210,10 @@
    "source": [
     "from mitiq import Calibrator\n",
     "\n",
-    "cal = Calibrator(...)\n",
     "\n",
-    "cal.run(log=True)"
+    "cal = Calibrator(...)\n",
+    "# run the calibration experiments\n",
+    "..."
    ]
   },
   {
@@ -223,13 +245,6 @@
    "source": [
     "cal.run(log=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
