--- a/solved/part1_zne.ipynb
+++ b/solved/part1_zne.ipynb
@@ -51,7 +51,7 @@
     "import cirq\n",
     "\n",
     "\n",
-    "def execute(circuit, noise_level=0.005):\n",
+    "def execute(circuit, noise_level=0.001):\n",
     "    \"\"\"Returns Tr[ρ |0⟩⟨0|] where ρ is the state prepared by the circuit\n",
     "    with depolarizing noise.\"\"\"\n",
     "    noisy_circuit = circuit.with_noise(cirq.depolarize(p=noise_level))\n",
@@ -124,6 +124,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Extrapolation\n",
+    "\n",
+    "Computing the Zero-Noise limit."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mitiq.zne.inference import RichardsonFactory, LinearFactory, ExpFactory\n",
+    "\n",
+    "lin = LinearFactory([1, 3, 5])\n",
+    "\n",
+    "lin.run(circuit, execute)\n",
+    "lin.reduce()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lin.plot_fit();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Randomized Benchmarking circuits are circuits that are in effect, equivalent to the identity. Hence, the ideal probability that the end state is $|00\\cdots 0\\rangle$ is 1."
    ]
   },
@@ -133,7 +165,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from mitiq.benchmarks import generate_rb_circuits"
+    "from mitiq.benchmarks import generate_rb_circuits\n",
+    "\n",
+    "circuit = generate_rb_circuits(2, num_cliffords=20)[0]\n",
+    "\n",
+    "# print(circuit)"
    ]
   },
   {
@@ -145,11 +181,46 @@
     "from mitiq import zne\n",
     "\n",
     "\n",
-    "circuit = generate_rb_circuits(2, num_cliffords=20)[0]\n",
-    "\n",
     "true_value = execute(circuit, noise_level=0.0)\n",
     "noisy_value = execute(circuit)\n",
     "zne_value = zne.execute_with_zne(circuit, execute)\n",
+    "\n",
+    "print(f\"Error w/o  Mitiq: {abs((true_value - noisy_value) / true_value):.3f}\")\n",
+    "print(f\"Error w Mitiq:    {abs((true_value - zne_value) / true_value):.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise\n",
+    "\n",
+    "Keeping the circuit the same, can you get a smaller error by modifying some of the ZNE options?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mitiq.zne.scaling import fold_global, fold_gates_at_random, identity_insertion\n",
+    "from mitiq.zne.inference import (\n",
+    "    LinearFactory,\n",
+    "    RichardsonFactory,\n",
+    "    PolyFactory,\n",
+    "    ExpFactory,\n",
+    ")\n",
+    "\n",
+    "inference_method = ...  # this will include scale factors, which you can play with!\n",
+    "noise_scaling_method = ...\n",
+    "\n",
+    "zne_value = zne.execute_with_zne(\n",
+    "    circuit,\n",
+    "    execute,\n",
+    "    factory=inference_method,\n",
+    "    scale_noise=noise_scaling_method,\n",
+    ")\n",
     "\n",
     "print(f\"Error w/o  Mitiq: {abs((true_value - noisy_value) / true_value):.3f}\")\n",
     "print(f\"Error w Mitiq:    {abs((true_value - zne_value) / true_value):.3f}\")"
@@ -191,7 +262,7 @@
    "source": [
     "from mitiq import Calibrator\n",
     "\n",
-    "cal = Calibrator(...)\n",
+    "cal = Calibrator(execute_with_depolarizing, frontend=\"cirq\")\n",
     "\n",
     "cal.run(log=True)"
    ]
@@ -225,13 +296,6 @@
    "source": [
     "cal.run(log=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
