--- a/solved/part1_zne.ipynb
+++ b/solved/part1_zne.ipynb
@@ -6,13 +6,13 @@
    "source": [
     "# Mitiq Tutorial\n",
     "\n",
-    "Before running this tutorial, make sure you have `cirq`, and `mitiq` installed.\n",
+    "Before running this tutorial, make sure you have `mitiq` installed.\n",
     "\n",
     "```bash\n",
-    "pip install cirq mitiq\n",
+    "pip install mitiq\n",
     "```\n",
     "\n",
-    "Use `pip list | grep $package` to ensure it is installed.\n",
+    "Use `pip list | grep mitiq` to ensure it is installed.\n",
     "\n",
     "\n",
     "# Goals\n",
