add exercise to main notebook

--- a/part1_zne.ipynb
+++ b/part1_zne.ipynb
@@ -178,6 +178,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Exercise\n",
+    "\n",
+    "Keeping the circuit the same, can you get a smaller error by modifying some of the ZNE options?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mitiq.zne.scaling import fold_global, fold_gates_at_random, identity_insertion\n",
+    "from mitiq.zne.inference import (\n",
+    "    LinearFactory,\n",
+    "    RichardsonFactory,\n",
+    "    PolyFactory,\n",
+    "    ExpFactory,\n",
+    ")\n",
+    "\n",
+    "inference_method = ...  # this will include scale factors, which you can play with!\n",
+    "noise_scaling_method = ...\n",
+    "\n",
+    "zne_value = zne.execute_with_zne(\n",
+    "    circuit,\n",
+    "    execute,\n",
+    "    factory=inference_method,\n",
+    "    scale_noise=noise_scaling_method,\n",
+    ")\n",
+    "\n",
+    "print(f\"Error w/o  Mitiq: {abs((true_value - noisy_value) / true_value):.3f}\")\n",
+    "print(f\"Error w Mitiq:    {abs((true_value - zne_value) / true_value):.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Calibration\n",
     "\n",
     "When you want to explore more options"
